--- a/src/app/pages/recommended/recommended.component.html
+++ b/src/app/pages/recommended/recommended.component.html
@@ -32,4 +32,6 @@
       </div>
     </mat-grid-tile>
   </mat-grid-list>
-  
+  <div class="w-100 h-100 loading-overlay d-flex" *ngIf="loading">
+    <mat-spinner class="m-auto" [diameter]="55"></mat-spinner>
+  </div>
