--- a/src/app/pages/recommended/recommended.component.scss
+++ b/src/app/pages/recommended/recommended.component.scss
@@ -60,3 +60,9 @@
     -moz-box-shadow: 0px -1px 12px 0px rgba(0,0,0,0.75);
     box-shadow: 0px -1px 12px 0px rgba(0,0,0,0.75);
 }
+
+.loading-overlay {
+    position: absolute;
+    top: 0;
+    background-color: #ffffff17;
+}
