--- a/src/app/pages/groups/groups.component.html
+++ b/src/app/pages/groups/groups.component.html
@@ -3,19 +3,19 @@
 </div>
 <div class="movie-grid">
     <div class="header-row group-row row py-2">
-        <div class="col-4">
+        <div class="col-2">
             <span class="group-id">Group Id</span>
         </div>
-        <div class="col-8">
+        <div class="col-10">
             <span>Users</span>
         </div>
     </div>
 <div class="group-row row py-2" *ngFor="let group of groups">
-    <div class="col-4">
+    <div class="col-2">
         <span class="group-id">{{group.groupId}}</span>
     </div>
-    <div class="col-8">
-        <mat-chip-list aria-label="Fish selection">
+    <div class="col-10">
+        <mat-chip-list aria-label="">
             <mat-chip  class="user-chip" *ngFor="let user of group.users.split(',')" [removable]="true">{{user}}
                 <mat-icon class="cancel-icon" matChipRemove>cancel</mat-icon>
             </mat-chip>
